<?xml version="1.0"?>
<package format="2">
  <name>orb_slam</name>
  <version>0.0.1</version>
  <description>ORB-SLAM ROS package</description>
  <maintainer email="dhanjalsahib@gmail.com">Sahib Dhanjal</maintainer>
  <license>GPLv3</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>tf</depend>
  
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

</package>
