<?xml version="1.0"?>
<package format="2">
  <name>orb_slam</name>
  <version>0.0.1</version>
  <description>ORB SLAM ROS package</description>
  <maintainer email="dhanjalsahib@gmail.com">Sahib Dhanjal</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>

</package>
